--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.parallel=true
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.3
-	yarn_mappings=1.19.3+build.1
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.28
 	loader_version=0.14.11
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = com.brainsmash
+	archives_base_name = broken_world
 
 # Dependencies
-	fabric_version=0.68.1+1.19.3
+	fabric_version=0.69.0+1.19.2
