--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
-	//maven {
-	//	url = "https://maven.kyrptonaught.dev"
-	//}
+	maven {
+		url = "https://maven.kyrptonaught.dev"
+	}
 }
 
 dependencies {
+	modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
+	include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -29,9 +31,6 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	//modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta58-1.19'
-	//include 'net.kyrptonaught:customportalapi:0.0.1-beta58-1.19'
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
