--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,16 @@ repositories {
 	maven {
 		url = "https://maven.kyrptonaught.dev"
 	}
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+	}
 }
 
 dependencies {
 	modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
 	include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
+	modImplementation include("io.github.cottonmc:LibGui:6.4.0+1.19")
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
