--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,10 @@
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 
+# Proxy Settings
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=1080
+
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
 	minecraft_version=1.19.2
