--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
+	maven {
+		name = "AlexIIL"
+		url = "https://maven.alexiil.uk/"
+	}
 }
 
 dependencies {
@@ -45,6 +49,7 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	modImplementation "dev.emi:trinkets:3.4.1"
+	modImplementation "alexiil.mc.lib:libnetworkstack-base:0.7.0"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
