--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 	modImplementation "dev.emi:trinkets:3.4.1"
 	modImplementation "alexiil.mc.lib:libnetworkstack-base:0.7.0"
 	modImplementation "alexiil.mc.lib:libblockattributes-all:0.11.0"
+	modImplementation "alexiil.mc.lib:libmultipart-all:0.8.0"
 
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
