--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,18 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
-
 # Proxy Settings
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
-
 # Fabric Properties
-	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.2
-	yarn_mappings=1.19.2+build.28
-	loader_version=0.14.11
-
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.11
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.brainsmash
-	archives_base_name = broken_world
-
+mod_version=1.0.0
+maven_group=com.brainsmash
+archives_base_name=broken_world
+modid=Broken World
 # Dependencies
-	fabric_version=0.69.0+1.19.2
+fabric_version=0.69.0+1.19.2
