--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,13 @@ loom {
     }
 }
 
-sourceSets { main { resources { srcDirs += dataOutput } } }
+sourceSets {
+    main {
+        resources {
+            srcDirs += dataOutput
+        }
+    }
+}
 
 tasks.withType(JavaCompile).configureEach {
     // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
@@ -92,9 +98,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 java {
-    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-    // if it is present.
-    // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
 
@@ -102,6 +105,10 @@ jar {
     from("LICENSE") {
         rename { "${it}_${project.archivesBaseName}" }
     }
+}
+
+sourcesJar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 // configure the maven publication
