--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
+    maven { url "https://api.modrinth.com/maven" }
     maven {
         url = "https://maven.kyrptonaught.dev"
     }
@@ -49,11 +50,14 @@ dependencies {
     modImplementation "alexiil.mc.lib:libnetworkstack-base:0.7.0"
     modImplementation "alexiil.mc.lib:libblockattributes-all:0.11.0"
 
-    modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
-    include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
+//    modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
+//    include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
 
-    //modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta63-1.19.X'
-    //    include 'net.kyrptonaught:customportalapi:0.0.1-beta63-1.19.X'
+    modCompileOnly('maven.modrinth:sodium:mc1.19.2-0.4.4') { exclude group: "net.fabricmc.fabric-api" }
+    modImplementation include('net.kyrptonaught:customportalapi:0.0.1-beta63-1.19.X') {
+        exclude group: "net.fabricmc.fabric-api"
+        exclude module: "sodium"
+    }
     modImplementation include("io.github.cottonmc:LibGui:6.4.0+1.19")
 
     // Uncomment the following line to enable the deprecated Fabric API modules.
