--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
     maven { url "https://api.modrinth.com/maven" }
+    maven { url "https://maven.shedaniel.me/" }
     maven {
         url = "https://maven.kyrptonaught.dev"
     }
@@ -29,12 +30,12 @@ repositories {
         url = "https://maven.terraformersmc.com/"
     }
     maven {
-        name = "Ladysnake Libs"
-        url = "https://ladysnake.jfrog.io/artifactory/mods"
-    }
-    maven {
         name = "AlexIIL"
         url = "https://maven.alexiil.uk/"
+    }
+    maven {
+        name = "Ladysnake Libs"
+        url = "https://ladysnake.jfrog.io/artifactory/mods"
     }
 }
 
@@ -59,7 +60,7 @@ dependencies {
         exclude module: "sodium"
     }
     modImplementation include("io.github.cottonmc:LibGui:6.4.0+1.19")
-
+    modApi("me.shedaniel:RoughlyEnoughItems-fabric:9.1.632")
     // Uncomment the following line to enable the deprecated Fabric API modules.
     // These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
