--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ dependencies {
         exclude module: "sodium"
     }
     modImplementation include("io.github.cottonmc:LibGui:6.4.0+1.19")
-    modApi("me.shedaniel:RoughlyEnoughItems-fabric:9.1.632")
+    modCompileOnly("me.shedaniel:RoughlyEnoughItems-api-fabric:9.1.632")
     // Uncomment the following line to enable the deprecated Fabric API modules.
     // These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
