--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ org.gradle.parallel=true
 # Proxy Settings
 systemProp.http.proxyHost=127.0.0.1
 systemProp.http.proxyPort=1080
+http.proxyHost=127.0.0.1
+http.proxyPort=1080
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.19.2
