--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ repositories {
         name = "Ladysnake Libs"
         url = "https://maven.ladysnake.org/releases"
     }
+    maven {
+        url 'https://maven.jamalam.tech/releases'
+    }
 }
 
 dependencies {
@@ -50,6 +53,7 @@ dependencies {
     modImplementation "dev.emi:trinkets:3.4.1"
     modImplementation "alexiil.mc.lib:libnetworkstack-base:0.7.0"
     modImplementation "alexiil.mc.lib:libblockattributes-all:0.11.0"
+    modImplementation 'io.github.jamalam360:multiblocklib:0.2.0'
 
 //    modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
 //    include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
