--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx4G
+org.gradle.jvmargs=-Xmx3G
 org.gradle.parallel=true
 # Proxy Settings
 systemProp.http.proxyHost=127.0.0.1
@@ -10,11 +10,11 @@ http.proxyPort=1080
 # check these on https://fabricmc.net/develop
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
-loader_version=0.14.11
+loader_version=0.15.11
+# Fabric API
+fabric_version=0.77.0+1.19.2
 # Mod Properties
 mod_version=1.0.0
 maven_group=com.brainsmash
 archives_base_name=broken_world
 modid=broken_world
-# Dependencies
-fabric_version=0.69.0+1.19.2
