fix bugs and remove dependency
Signed-off-by: Authenticator <1057237562@outlook.com>

--- a/build.gradle
+++ b/build.gradle
@@ -48,8 +48,8 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "dev.emi:trinkets:3.4.1"
-    modApi "alexiil.mc.lib:libnetworkstack-base:0.7.0"
-    include "alexiil.mc.lib:libnetworkstack-base:0.7.0"
+    // modApi "alexiil.mc.lib:libnetworkstack-base:0.7.0"
+    // include "alexiil.mc.lib:libnetworkstack-base:0.7.0"
 
 //    modImplementation 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
 //    include 'net.kyrptonaught:customportalapi:0.0.1-beta57-1.19'
