add special effect
Signed-off-by: Authenticator <1057237562@outlook.com>

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // Fabric API. This is technically optional, but you probably want it anyway.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "dev.emi:trinkets:3.4.1"
+    include(implementation(annotationProcessor("io.github.llamalad7:mixinextras-fabric:0.4.1")))
     // modApi "alexiil.mc.lib:libnetworkstack-base:0.7.0"
     // include "alexiil.mc.lib:libnetworkstack-base:0.7.0"
 
